--- a/docs/modules/ROOT/pages/usage/getting_started.adoc
+++ b/docs/modules/ROOT/pages/usage/getting_started.adoc
@@ -112,8 +112,8 @@ See xref:integration_with_other_tools.adoc[Integration with Other Tools] for mor
 
 == Next Steps
 
-* xref:usage/basic_usage.adoc[CLI Reference] — full command-line reference with all flags
+* xref:usage/cli_reference.adoc[CLI Reference] — full command-line reference with all flags
 * xref:configuration.adoc[Configuration] — everything about `.rubocop.yml`
 * xref:usage/source_code_directives.adoc[Source Code Directives] — disable/enable cops inline with comments
 * xref:cops.adoc[Cops] — browse all available cops by department
-* xref:extensions.adoc[Extensions] — add cops for Rails, RSpec, Performance, and more
+* xref:plugins.adoc[Extensions] — add cops for Rails, RSpec, Performance, and more
